# AtomicEngine

./: .gitignore  CMakeLists.txt  shader_bundle.py
include/atomic/: atom.h  camera.h  game.h  input_handle.h  spirv.h  types.h  util.h  vulkan_module.h  window_module.h
shader/: base.frag  base.vert
src/: atom.c  camera.c  game.c  main.c  types.c  util.c
src/vulkan_module/: allocate_command_buffer.c  allocate_descriptor_sets.c  create_buffer.c  create_command_pool.c  create_descriptor_layout.c  create_descriptor_pool.c  create_device.c  create_framebuffers.c  create_instance.c  create_pipeline.c  create_pipeline_layout.c  create_render_pass.c  create_shader_module.c  create_staged_buffers.c  create_swapchain.c  get_surface_information.c  initialize.c  load_physical_devices.c  load_queue_families.c  load_swapchain_images.c  recreate_swapchain.c
src/window_module/: window.c
